TLA-1086: Slider fix, will work now on mobile IE and Edge browsers

--- a/pkg/www/stylesheets/layout.scss
+++ b/pkg/www/stylesheets/layout.scss
@@ -336,3 +336,10 @@ fieldset:first-of-type {
 }
 */
 
+#output {
+    p {
+        margin: 0;
+        padding: 0;
+        line-height: 1em;
+    }
+}
